			Java Electric change log

NOTE: Please place changes under the version that will be released next.

************************* Version 8.02o: *********************************

BUG: (05/23/05, GVG) Fix for DRC bug #312 (didn't detect small feature)
FIX: Check small feature even if polygons are connected.

IMP: (05/23/05, GVG) New size for native transistors

BUG: (05/23/05, GVG) Motion indicator in tool bar set wrongly on startup (Bug #337)
FIX: There was no setup in ToolBar, changes in EditMenu didn't change ToolBar values and changes in
GridAndAligment didn't change ToolBar/EditMenu buttons.

BUG: (05/23/05, GVG) TSMC90 layers not in the correct order (Bug #336)
FIX: Error in TSMC90.getContactFunction().

BUG: (05/20/05, GVG) DRC doesn't detect overlap between PWell/NWell when nodes are connected (Bug #333)
FIX: Transform UCONSPA into SPACING rule (TSMC90: NW.S.0, MoCMOS: 1.4

IMP/MAN: (05/19/05, SMR) Mirroring (in the commands and in the Node Properties dialog) is now described
     in terms of "left <-> right" and "up <-> down" (Bug #327).

IMP: (05/19/05, SMR) Intelligent placement of duplicate copies when "move after duplicate" is not checked.

BUG: (05/19/05, SMR) Highlighting an export on the example icon doesn't show all of the equivalent nodes.
FIX: In Highlight.showHighlight(), include the node with the real export.

BUG: (05/19/05, SMR) HSpice waveform plotting doesn't handle amperage right (signals that start with "I(") (Bug #303).
FIX: In HSpiceOut.readTR0File(), expand numbers when they start after the "("; move the "(" to the last symbol.

IMP: (05/19/05, SMR) Automatic icon generation now makes thick black icons, not thin red ones.

IMP: (05/19/05, SMR) Technology editor can now create octagonal shapes.

IMP: (05/18/05, SMR) Changing one node to another will adjust arcs in simple
     situations instead of adding jogs (Bug #321).

IMP/MAN: (05/18/05, SMR) Can now switch the side bar to the right side (in General Preferences, too).
