@@ -127,10 +127,10 @@ public class WindowFrame extends Observable
 		} else
 		{
 			EditWindow eWnd = EditWindow.CreateElectricDoc(cell, frame);
-            frame.finishWindowFrameInformation(eWnd, cell);
+			Dimension sz = frame.finishWindowFrameInformation(eWnd, cell);
 
 			// make sure the edit window has the right size
-			eWnd.setScreenSize(eWnd.getSize());
+			eWnd.setScreenSize(sz);
 			eWnd.repaintContents(null);
 			eWnd.fillScreen();
 		}
@@ -152,14 +152,13 @@ public class WindowFrame extends Observable
 
     /**
      * Method to finish with frame pointers.
-     * @param wnd
-     * @param cell
      */
-    public void finishWindowFrameInformation(WindowContent wnd, Cell cell)
+    public Dimension finishWindowFrameInformation(WindowContent wnd, Cell cell)
     {
-        buildWindowStructure(wnd, cell, null);
+        Dimension sz = buildWindowStructure(wnd, cell, null);
         setCurrentWindowFrame(this);
         populateJFrame();
+		return sz;
     }
 
     /*****************************************************************************
@@ -247,7 +246,7 @@ public class WindowFrame extends Observable
 		}
 	}
 
-	private void buildWindowStructure(WindowContent content, Cell cell, GraphicsConfiguration gc)
+	private Dimension buildWindowStructure(WindowContent content, Cell cell, GraphicsConfiguration gc)
 	{
 		this.content = content;
 
@@ -307,6 +306,7 @@ public class WindowFrame extends Observable
 		synchronized(windowList) {
 			windowList.add(this);
 		}
+		return sz;
 	}
 
 	private static final int WINDOW_OFFSET = 0;		// was 150
